[gd_scene load_steps=7 format=3 uid="uid://cf0knm48erqbj"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_4k555"]
[ext_resource type="Texture2D" uid="uid://0yj0bpe8q80x" path="res://icon.svg" id="1_h8c5l"]
[ext_resource type="Script" path="res://scripts/health.gd" id="3_yall3"]
[ext_resource type="Script" path="res://scripts/hurtbox.gd" id="4_qfmrt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_op8pd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ttltg"]
radius = 65.01

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_4k555")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_h8c5l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_op8pd")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="HUD" type="CanvasLayer" parent="Camera2D"]

[node name="MarginContainer" type="MarginContainer" parent="Camera2D/HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/HUD/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/HUD/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TimerLable" type="Label" parent="Camera2D/HUD/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "perkele
"
vertical_alignment = 2

[node name="HealthLable" type="Label" parent="Camera2D/HUD/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
vertical_alignment = 1

[node name="Health" type="Node" parent="."]
script = ExtResource("3_yall3")

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
script = ExtResource("4_qfmrt")
health = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_ttltg")

[connection signal="health_depleted" from="Health" to="." method="_on_health_health_depleted"]
